# ai-resvg

./: Cargo.toml  README.md  version-bump.md
.github/workflows/: main.yml  tagged-release.yml
crates/ai-resvg/: Cargo.toml
crates/ai-resvg/examples/: custom_href_resolver.rs  draw_bboxes.rs  minimal.rs
crates/ai-resvg/src/: main.rs  render.rs
crates/ai-resvg/src/filter/: box_blur.rs  color_matrix.rs  convolve_matrix.rs  iir_blur.rs  mod.rs  morphology.rs  turbulence.rs
crates/ai-resvg/tests/integration/: main.rs  render.rs
crates/ai-usvg/: Cargo.toml
crates/ai-usvg/docs/: spec.adoc
crates/ai-usvg/src/: lib.rs  writer.rs
crates/ai-usvg/src/parser/: clippath.rs  converter.rs  filter.rs  image.rs  marker.rs  mod.rs  options.rs  paint_server.rs  text.rs  units.rs  use_node.rs
crates/ai-usvg/src/parser/svgtree/: names.rs  parse.rs  text.rs
crates/ai-usvg/src/text/: colr.rs  flatten.rs
crates/ai-usvg/src/tree/: filter.rs  mod.rs  text.rs
crates/ai-usvg/tests/: parser.rs  write.rs
crates/c-api/: Cargo.toml  README.md  ResvgQt.h  lib.rs
crates/resvg/: Cargo.toml
crates/resvg/src/: image.rs  lib.rs  path.rs
crates/resvg/src/filter/: box_blur.rs  component_transfer.rs  displacement_map.rs  iir_blur.rs  lighting.rs  mod.rs  morphology.rs  turbulence.rs
crates/resvg/tests/: README.md
crates/usvg/: Cargo.toml  README.md
crates/usvg/docs/: spec.adoc
crates/usvg/src/: writer.rs
crates/usvg/src/parser/: filter.rs  marker.rs  mask.rs  mod.rs  options.rs  style.rs  switch.rs  text.rs  units.rs
crates/usvg/src/parser/svgtree/: mod.rs  parse.rs  text.rs
crates/usvg/src/text/: colr.rs  flatten.rs  layout.rs  mod.rs
crates/usvg/src/tree/: geom.rs  mod.rs
tools/explorer-thumbnailer/: Cargo.toml
tools/explorer-thumbnailer/install/: installer.iss
tools/explorer-thumbnailer/src/: utils.rs
