[package]
name = "ai-resvg"
version = "0.47.0"
keywords = ["svg", "render", "raster"]
license.workspace = true
edition = "2024"
rust-version = "1.87.0"
description = "A no_std fork of resvg"
repository = "https://github.com/atom-planet-embrace/ai-resvg"
exclude = ["tests"]
workspace = "../.."

[[bin]]
name = "ai-resvg"
required-features = ["text", "system-fonts", "memmap-fonts"]

[dependencies]
gif = { version = "0.14.1", optional = true }
image-webp = { version = "0.2.4", optional = true }
libm = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
no_std_io = { version = "0.6", default-features = false, features = ["alloc"] }
pico-args = { version = "0.5", features = ["eq-separator"], optional = true }
rgb = { version = "0.8", features = ["as-bytes"] }
svgtypes = { version = "0.16.1", default-features = false, features = ["libm"] }
tiny-skia = { version = "0.12.0", default-features = false, features = ["no-std-float"] }
usvg = { package = "ai-usvg", path = "../ai-usvg", version = "0.47.0", default-features = false }
zune-jpeg = { version = "0.5.8", optional = true }

[dev-dependencies]
once_cell = "1.21"
png = "0.18.0"

[features]
default = ["text"]
std = ["no_std_io/std", "usvg/std", "log/std", "svgtypes/std", "tiny-skia/std", "tiny-skia/png-format", "dep:pico-args"]
# Enables SVG Text support.
# Adds around 400KiB to your binary.
text = ["usvg/text"]
# Enables system fonts loading (only for `text`). Requires std.
system-fonts = ["std", "usvg/system-fonts"]
# Enables font files memmaping for faster loading (only for `text`). Requires std.
memmap-fonts = ["std", "usvg/memmap-fonts"]
# Enables decoding and rendering of raster images. Requires std.
# When disabled, `image` elements with SVG data will still be rendered.
# Adds around 200KiB to your binary.
raster-images = ["std", "gif", "image-webp", "dep:zune-jpeg"]
