[package]
name = "ai-resvg-capi"
description = "A no_std fork of resvg-capi"
version = "0.47.0"
keywords = ["svg", "render", "raster", "c-api"]
license.workspace = true
edition = "2024"
rust-version = "1.87.0"
workspace = "../.."

[lib]
name = "resvg"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
no_std_io = { version = "0.6", default-features = false }
resvg = { package = "ai-resvg", path = "../resvg", default-features = false }

[features]
default = ["text"]
std = ["no_std_io/std", "resvg/std"]
# enables SVG Text support
# adds around 500KiB to your binary
text = ["resvg/text"]
# enables system fonts loading (only for `text`). Requires std.
system-fonts = ["std", "resvg/system-fonts"]
# enables font files memmaping for faster loading (only for `text`). Requires std.
memmap-fonts = ["std", "resvg/memmap-fonts"]
# Requires std.
raster-images = ["std", "resvg/raster-images"]
capi = []

[package.metadata.capi.header]
generation = false

[package.metadata.capi.install.include]
asset = [{ from="resvg.h" }]
