[package]
name = "ai-usvg"
version = "0.47.0"
keywords = ["svg"]
license.workspace = true
edition = "2024"
rust-version = "1.87.0"
description = "A no_std fork of usvg"
categories = ["multimedia::images"]
repository = "https://github.com/atom-planet-embrace/ai-resvg"
documentation = "https://docs.rs/usvg/"
readme = "README.md"
exclude = ["tests"]
workspace = "../.."

[[bin]]
name = "usvg"
path = "src/main.rs"
required-features = ["text", "system-fonts", "memmap-fonts"]

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] } # for embedded images
hashbrown = "0.15"
libm = "0.2"
log = { version = "0.4", default-features = false }
miniz_oxide = "0.8"
no_std_io = { version = "0.6", default-features = false, features = ["alloc"] }
pico-args = { version = "0.5", features = ["eq-separator"], optional = true }
strict-num = { version = "0.1.1", default-features = false }
svgtypes = { version = "0.16.1", default-features = false, features = ["libm"] }
tiny-skia-path = { version = "0.12.0", default-features = false, features = ["no-std-float"] }
xmlwriter = { package = "ai-xmlwriter", git = "https://github.com/atom-planet-embrace/ai-xmlwriter", default-features = false }

# parser
data-url = { version = "0.3", default-features = false, features = ["alloc"] } # for href parsing
# flate2 removed — using miniz_oxide directly for no_std SVGZ decompression
imagesize = { package = "ai-imagesize", version = "0.14.0", features = ["gif", "jpeg", "png", "webp"] } # raster images size detection
kurbo = { version = "0.13.0", default-features = false, features = ["libm"] } # Bezier curves utils
roxmltree = { version = "0.21.1", default-features = false }
simplecss = { version = "0.2", default-features = false }
siphasher = { version = "1.0", default-features = false } # perfect hash implementation

# text
fontdb = { version = "0.23.0", default-features = false, optional = true }
rustybuzz = { version = "0.20.1", optional = true }
# Note: ttf-parser is re-exported from rustybuzz, but we need gvar-alloc for variable fonts
# with many variation axes (like Roboto Flex which has 13 axes)
ttf-parser = { version = "0.25.1", features = ["gvar-alloc"], optional = true }
unicode-bidi = { version = "0.3", optional = true }
unicode-script = { version = "0.5", optional = true }
unicode-vo = { version = "0.1", optional = true }

[dev-dependencies]
once_cell = "1.21"

[features]
default = ["text"]
std = ["no_std_io/std", "log/std", "base64/std", "svgtypes/std", "roxmltree/std", "simplecss/std", "siphasher/std", "kurbo/std", "data-url/std", "dep:pico-args"]
# Enables text-to-path conversion support.
# Adds around 400KiB to your binary.
text = ["fontdb", "rustybuzz", "ttf-parser", "unicode-bidi", "unicode-script", "unicode-vo"]
# Enables system fonts loading. Requires std.
system-fonts = ["std", "fontdb/fs", "fontdb/fontconfig"]
# Enables font files memmaping for faster loading. Requires std.
memmap-fonts = ["std", "fontdb/memmap"]
